# PackLock

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
src/packlock/: __init__.py  archive.py  cli.py  crypto.py
tests/: test_archive.py  test_crypto.py
