[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packlock"
version = "0.1.0"
description = "Pack it. Lock it. Share it safely. Encrypt folders with AES-256-GCM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
packlock = "packlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
